# securing-s3-access

./: .gitignore  LICENSE  README.md  install.sh  test-access.sh  uninstall.sh
.github/workflows/: backend-ci.yml  backend-release.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  main.py  s3.py
backend/app/routers/: example01.py  example02.py  example03.py  example04.py  login.py
backend/tests/: conftest.py  test_example01.py  test_example02.py  test_example03.py  test_example04.py  test_login.py
helm/envoy-ingress/: Chart.yaml  values.yaml
helm/envoy-ingress/templates/: gateway.yaml  gatewayclass.yaml
helm/examples/01-backend-proxy/: Chart.yaml  values.yaml
helm/examples/01-backend-proxy/templates/: _helpers.tpl  deployment.yaml  (+4 more)
helm/examples/02-gateway-auth/: Chart.yaml  values.yaml
helm/examples/03-presigned-url/: Chart.yaml  values.yaml
helm/garage/: Chart.yaml  values.yaml
helm/garage-instance/: Chart.yaml  values.yaml
helm/garage-instance/templates/: _helpers.tpl  garagebucket-alice.yaml  garagebucket-bob.yaml  garagecluster.yaml  garagekey.yaml  post-install-job.yaml  secret.yaml
helm/garage-operator/: Chart.yaml  values.yaml
helm/garage/crds/: garage.rajsingh.info_garageadmintokens.yaml  garage.rajsingh.info_garagebuckets.yaml  garage.rajsingh.info_garageclusters.yaml  garage.rajsingh.info_garagekeys.yaml  garage.rajsingh.info_garagenodes.yaml
helm/garage/templates/: _helpers.tpl  garagebucket-alice.yaml  garagebucket-bob.yaml  garagecluster.yaml  garagekey.yaml  post-install-job.yaml  secret.yaml
(+15 files in other folders)
